devops/apidemo/frontend/cndportal-ing.yaml

kind: Service
apiVersion: v1
metadata:
  name: appdev-cndreality-svc
  namespace: appdevdemo
  
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  selector:
    app: apidemo-cndreality
---
kind: Route
apiVersion: route.openshift.io/v1

spec:
  host: cndreality.apps.sacluster.stonecutterspod.live
  to:
    kind: Service
    name: appdev-cndreality-svc
    weight: 100
  port:
    targetPort: 8081
  tls:
    termination: edge
  wildcardPolicy: None
