devops/apidemo/frontend/cndportal-svc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdev-apidemo-cndreality-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apidemo-cndreality
  template:
    metadata:
      labels:
        app: apidemo-cndreality
    spec:
      containers:
      - env:
        - name: KEYCLOAK_URL
          valueFrom:
            configMapKeyRef:
              key: appdev-apidemo.property.KEYCLOAK_URL
              name: appdev-apidemo-cm
        - name: KEYCLOAK_CLIENT_ID
          valueFrom:
            configMapKeyRef:
              key: appdev-apidemo.property.KEYCLOAK_CLIENT_ID
              name: appdev-apidemo-cm
        - name: KEYCLOAK_REALM
          valueFrom:
            configMapKeyRef:
              key: appdev-apidemo.property.KEYCLOAK_REALM
              name: appdev-apidemo-cm
        - name: DEBUG
          value: "true"
        - name: sample_env
          value: "sample_env_value"
        image: quay.io/jmaira/appdev_apidemofe:c33b96b
        name: cndreality
        ports:
        - containerPort: 8081
          protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: appdev-cndreality-svc
  namespace: appdevdemo
  
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  selector:
    app: apidemo-cndreality
---
kind: Route
apiVersion: route.openshift.io/v1

spec:
  host: cndreality.apps.sacluster.stonecutterspod.live
  to:
    kind: Service
    name: appdev-cndreality-svc
    weight: 100
  port:
    targetPort: 8081
  tls:
    termination: edge
  wildcardPolicy: None
